# oci-mcp-server

./: .gitignore  OAUTH_SETUP.md  README.md  browser-client.html  compare_transports.py  cors_proxy.py  mcp_test_server.py  oauth-client.html  pyproject.toml  simple-client.html  simple_mcp_test.py  test_debug.py  test_streaming.sh
html/: oidc.html  test_authenticated.html  test_cors_check.html  test_mcp_after_auth.html  test_oidc.html  test_oidc_callback.html  test_oidc_simple.html  test_via_proxy.html
src/: authentication.py  client_llama_react.py  client_stdio.py  config.py  gateway_services.py  main.py  mcp_connector.py  mcp_template.json  oauth_config_template.py  server.py  simple_get_server.py  streaming_server.py  streaming_server_noauth.py  streaming_server_post.py
