[project]
name = "oci-mcp-server"
version = "0.2.0"
description = "Oracle Cloud Infrastructure (OCI) MCP Server with HTTP streaming support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OCI MCP Server Team"}
]
keywords = ["mcp", "oci", "oracle-cloud", "api-gateway", "streaming-http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Networking"
]
requires-python = ">=3.13.5"
dependencies = [
    # Core MCP and HTTP server dependencies
    "mcp==1.12.4",
    "fastapi==0.116.1",
    "uvicorn[standard]>=0.30.0",
    
    # OCI SDK and authentication
    "oci>=2.150.0",
    "python-dotenv>=1.1.0",
    
    # LlamaIndex integration (optional)
    "llama-index==0.12.34",
    "llama-index-llms-ollama==0.5.4",
    "ollama==0.4.8",
    
    # Async support
    "nest-asyncio==1.6.0",
    
    # HTTP client for tools (if needed)
    "requests>=2.31.0",
    
    # Logging and utilities
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0"
]

[project.urls]
Homepage = "https://github.com/your-org/oci-mcp-server"
Repository = "https://github.com/your-org/oci-mcp-server"
Documentation = "https://github.com/your-org/oci-mcp-server#readme"
Issues = "https://github.com/your-org/oci-mcp-server/issues"

[project.scripts]
oci-mcp-stdio = "server:main"
oci-mcp-streaming = "streaming_server:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "authentication",
    "client_llama_react", 
    "client_stdio",
    "config",
    "gateway_services",
    "main",
    "server",
    "streaming_server"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

# Development tools configuration
[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/*_test.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]